--- a/src/Tab/Tab.module.css
+++ b/src/Tab/Tab.module.css
@@ -3,3 +3,17 @@
     max-height: 320px;
     object-fit: contain;
 }
+
+.ExternalLink {
+    display: inline-block;
+    margin-left: 8px;
+    width: 24px;
+    height: 24px;
+    padding: 2px;
+}
+
+.ExternalLink img,
+.ExternalLink svg {
+    width: 100%;
+    height: 100%;
+}
